# CNN-w-explanation

./: .gitignore  Box.h  CMakeLists.txt  Conv2D.h  ConvVisualizer.h  InteractionManager.h  LICENSE  MLP.h  MLPVisualizer.h  README.md  ReshapeVisualizer.h  TensorVisualizer.h  Utils.h  Vec3.h  main.cpp
